FindBugs, changes, compiling